<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".locationreminders.savereminder.SaveReminderFragment"
    >

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel"
            />

    </data>

    <!-- Layout: Frame -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Container: CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="10dp"
            >

            <!-- Layout: Constraint -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/save_reminder_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_bg"
                >

                <!-- Input: @reminder_title_layout -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_title_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:hint="@string/reminder_title"
                    android:paddingTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminderTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/white"
                        android:padding="8dp"
                        android:text="@={viewModel.reminderTitle}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_description_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:hint="@string/reminder_desc"
                    android:paddingTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reminder_title_layout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminderDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/white"
                        android:gravity="start"
                        android:lines="10"
                        android:padding="8dp"
                        android:text="@={viewModel.reminderDescription}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/section_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintTop_toBottomOf="@id/reminder_description_layout"
                    />

                <LinearLayout
                    android:id="@+id/select_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/section_divider"
                    tools:ignore="UseCompoundDrawables"
                    >

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/select_location"
                        android:src="@drawable/ic_location"
                        app:tint="@color/colorPrimary"
                        />

                    <TextView
                        android:id="@+id/selectLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:hint="@string/select_location"
                        android:maxLines="1"
                        android:text="@{viewModel.reminderSelectedLocation}"
                        android:textColor="@android:color/black"
                        tools:text="@string/reminder_location"
                        />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- FAB: @saveReminder -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/save_remainder"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Progress Bar: @progressbar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
            tools:elevation="100dp"
            />

    </FrameLayout>
</layout>
