<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel"
            />

        <variable
            name="onSaveButtonClicked"
            type="android.view.View.OnClickListener"
            />

    </data>

    <!-- Map (Location Selector) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_location_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SelectLocationFragment"
            />

        <!-- Button: Save -->
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent"
            android:onClick="@{onSaveButtonClicked}"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
