...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <!-- FAB: Add Remainder -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addReminderFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:contentDescription="Add Remainder"
                android:src="@drawable/ic_add"
                app:fabSize="normal"
...
